--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node-windows": "^0.1.6",
     "chalk": "^5.4.1",
     "commander": "^14.0.0",
+    "dotenv": "^17.2.0",
     "node-linux": "^0.1.7",
     "node-windows": "^1.0.0-beta.8",
     "ora": "^8.2.0",
