--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "set-version": "node scripts/version.js"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.5",
     "@types/node": "^22.15.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@types/node-windows": "^0.1.6",
+    "adm-zip": "^0.5.16",
     "chalk": "^5.4.1",
     "commander": "^14.0.0",
     "dotenv": "^17.2.0",
+    "node-fetch": "^3.3.2",
     "node-linux": "^0.1.7",
     "node-windows": "^1.0.0-beta.8",
     "ora": "^8.2.0",
